# homepage

./: .env.example  .gitignore  ARCHITECTURE.md  IMPLEMENTATION.md  LICENSE  QUICKSTART.md  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: dev.yml  prod.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: .gitkeep
backend/src/: cert_watcher.rs  config.rs  db.rs  main.rs  vault.rs
frontend/: Dockerfile  nginx.conf  package.json  pnpm-lock.yaml  vite.config.ts
frontend-old/: index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend-old/src/: App.svelte  main.ts
frontend/src/: App.svelte
k8s/base/: argocd-ingress.yaml  backend.yaml  backup-cronjob.yaml  frontend.yaml  grafana.yaml  ingress.yaml  kustomization.yaml  minio.yaml  oauth2-proxy.yaml  postgres.yaml  prometheus.yaml  valkey.yaml  vault-bootstrap.yaml  vault-ingress.yaml  vault.yaml
k8s/overlays/dev/: ingress-patch.yaml  kustomization.yaml
k8s/overlays/prod/: backend-patch.yaml  ingress-patch.yaml  kustomization.yaml
monitoring/: prometheus-rules.yaml
nginx/: nginx.conf
scripts/: README.md  argocd-apps.yaml  cert-manager-issuers.yaml  deploy-k8s.sh  make-executable.sh  setup-dev.sh  setup-vault-bootstrap.sh  vault-config.hcl  vault-init.sh  vault-unseal.sh
